# llm-evaltrack

./: .dockerignore  .env.airgap.example  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  ENTERPRISE_READINESS_CHECKLIST_2026-05-02.md  LICENSE  LICENSING.md  MARKETING_MASTER_PLAN.md  OUTREACH.md  README.md  README_SDK.md  docker-compose.yml  example_langchain.py  example_llama_index.py  example_sdk.py  example_usage.py  pyproject.toml  railway.toml  requirements.txt  seed_data.py
.github/workflows/: backup-runner.yml  daily-campaign.yml  demo-freshness.yml  demo-topup.yml  health-radar.yml  pilot-instance-pulse.yml  pilot-pulse.yml  pypi-stats.yml  release-pilot-image.yml  synthetic-check.yml  uptime-health-alert.yml  uptime-watcher.yml  weekly-pypi-report.yml
agentlens/: LICENSE  __init__.py  tracing.py  tracker.py
agentlens/integrations/: anthropic.py  langchain.py  llama_index.py  openai.py
agents/: OUTREACH_STRATEGY.md  backup_runner.py  demo_freshness.py  health_radar.py  lead_finder.py  leads.csv  outreach_agent.py  outreach_preview.txt  pilot_instance_pulse.py  pilot_pulse.py  pilot_state.example.json  pypi_stats.py  pypi_stats_history.json  run_campaign.py  synthetic_check.py  uptime_watcher.py
api/: admin_auth.py  auth.py  costing.py  customer_access.py  license.py  main.py  plan_access.py  schemas.py
api/routes/: admin.py  alerts.py  billing.py  compliance.py  contact.py  (+9 more)
bugspy/: __init__.py  tracing.py
dashboard/: app.html  auth.js  book-demo.html  case_study.html  compliance.html  datenschutz.html  debug.html  deploy.html  enterprise.html  impressum.html  index.html  landing.html  legal-pack.html  nutzungsbedingungen.html  robots.txt  security-questionnaire-v2.html  security-questionnaire.html  security.html  sitemap.xml  sla.html  start.html  subprocessors.html  success.html  traces.html  waitlist.html
docs/: DEPLOY_CHECKLIST_PRECALL.md  PILOT_AUTOMATION_RUNBOOK.md  PILOT_KICKOFF.md  PRE_PILOT_DRY_RUN.md  SELF_HOST.md  SMOKE_TEST_RUNBOOK.md  SOURCE_OF_TRUTH.md
enterprise/: API_KEY_ROTATION_PROCESS_AND_AUDIT_EVENTS.md  AVV_DPA_OUTLINE.md  AVV_DPA_TEMPLATE_V1_FINAL.md  BACKUP_RESTORE_PROCESS.md  DATA_PROCESSING_ANNEX_V1_FINAL.md  ENTERPRISE_DEMO_SCRIPT_COMPLIANCE_TRUST_20_30_MIN.md  INCIDENT_RUNBOOK_TEMPLATE.md  LOAD_TEST_SCENARIO_AND_BENCHMARK_2026-05-02.md  OBJECTION_HANDLING_LANGSMITH_LANGFUSE_DATADOG.md  ON_CALL_MINIMUM_PLAN.md  PII_HANDLING_POLICY.md  POC_DESIGNS_V1.md  PROCUREMENT_PACK_V1.md  RBAC_IMPLEMENTATION_STATUS_2026-05-02.md  RBAC_MVP_SCOPE.md  RESTORE_TEST_PROTOCOL_2026-05-02.md  ROI_CALCULATOR_PILOT_TO_ANNUAL.md  SECURITY_ANNEX_V1_FINAL.md  SECURITY_FAQ_STRUCTURE.md  SECURITY_FAQ_V1.md  SECURITY_ONE_PAGER_V1.md  SECURITY_QUESTIONNAIRE_RESPONSE_PACK_V1.md  SECURITY_QUESTIONNAIRE_TOP30_V2.md  SLA_DRAFT_V1.md  SLA_V2_FINAL.md  SLO_ERROR_BUDGET_DRAFT.md  SSO_DECISION_PLAN_OIDC_FIRST.md  SUBPROCESSOR_LIST_AND_DATA_FLOW_V1.md  TENANT_PROJECT_SEPARATION.md  UPTIME_HEALTH_ALERTING.md  VULNERABILITY_DISCLOSURE_PROCESS.md  WEEK1_REVIEW_2026-05-02.md
evaluation/: engine.py  hallucination.py  llm_judge.py  quality.py
llm_observe/: __init__.py  tracing.py  tracker.py
pipeline/: worker.py
scripts/: create_pilot_access.py  generate_seo_pages.py  install.sh  pilot_demo_smoke.py  pilot_guardian.py  pilot_guardian.service.example  seed_demo.py  set_api_key_expiry.py  set_api_key_expiry_remote.py  setup_pilot_customer.py  uninstall.sh
sdk/: __init__.py  tracker.py
storage/: database.py  models.py
tests/: test_admin_auth.py  test_api_key_expiry.py  test_set_api_key_expiry.py  test_set_api_key_expiry_remote.py
(+20 files in other folders)
