[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentlens-monitor"
version = "0.2.0"
description = "LLM observability, quality scoring, hallucination detection, cost tracking, and agent run debugging — in 2 lines of code."
readme = "README_SDK.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["llm", "observability", "monitoring", "openai", "anthropic", "evaluation", "langsmith-alternative", "langsmith", "helicone", "llm-monitoring", "llm-observability", "agent-monitoring", "mlops", "llm-tracing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
openai    = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
all       = ["openai>=1.0", "anthropic>=0.40"]

[tool.hatch.build.targets.wheel]
packages = ["agentlens"]
